--- a/old/tsconfig.json
+++ b/old/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es6",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "jsx": "react",
+    "allowJs": true,
     "target": "es5",
+    "outDir": "./dist/",
     "lib": ["es5", "es6", "dom"]
 
   },
@@ -16,6 +19,6 @@
     "./test/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "../node_modules"
   ]
 }
