--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "standard",
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module",
@@ -8,14 +8,17 @@
     }
   },
   "rules": {
-    "semi" : "off",
-    "indent" :"off",
+    "semi": "off",
+    "indent": "off",
     "curly": "error",
-    "quotes": ["error", "single"],
+    "quotes": [
+      "error",
+      "single"
+    ],
     "spaced-comment": "off",
-    "space-before-function-paren":"off",
+    "space-before-function-paren": "off",
     "brace-style": "off",
-    "handle-callback-err":"off",
+    "handle-callback-err": "off",
     "no-new": "off",
     "no-unused-vars": "off"
   },
@@ -24,6 +27,30 @@
     "node": true
   },
   "plugins": [
-    "standard"
-  ]
+    "standard",
+    "react"
+  ],
+  "settings": {
+    "react": {
+      "createClass": "createReactClass", // Regex for Component Factory to use,
+      // default to "createReactClass"
+      "pragma": "React",  // Pragma to use, default to "React"
+      "version": "detect", // React version. "detect" automatically picks the version you have installed.
+      // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
+      // default to latest and warns if missing
+      // It will default to "detect" in the future
+      "flowVersion": "0.53" // Flow version
+    },
+    "propWrapperFunctions": [
+      // The names of any function used to wrap propTypes, e.g. `forbidExtraProps`. If this isn't set, any propTypes wrapped in a function will be skipped.
+      "forbidExtraProps",
+      {"property": "freeze", "object": "Object"},
+      {"property": "myFavoriteWrapper"}
+    ],
+    "linkComponents": [
+      // Components used as alternatives to <a> for linking, eg. <Link to={ url } />
+      "Hyperlink",
+      {"name": "Link", "linkAttribute": "to"}
+    ]
+  }
 }
