--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -2,6 +2,7 @@ files:
     ignore:
       - 'node_modules/**/*.scss'
       - 'node_modules/**/*.sass'
+      - 'src/scss/libs/**/*.scss'
 rules:
   bem-depth:
     - 0
