--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
