--- a/.eslintrc
+++ b/.eslintrc
@@ -25,11 +25,13 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "plugins": [
     "standard",
-    "react"
+    "react",
+    "promise"
   ],
   "settings": {
     "react": {
